Completed index.html

--- a/Pizza/index.html
+++ b/Pizza/index.html
@@ -8,15 +8,15 @@
 body{
 background-image:url(Bentinos-Pizza-Background-Texture.jpg);
   background-repeat: no-repeat;
-  background-size: 1300px 900px;
+  background-size: 100%;
 
 
 }
 
 .Header_and_subheader{
 text-align: center;
-color:red;
-background:#ffb445;
+color:white;
+background-color: rgba(0, 0, 255, 0.3);
 display:block;
  font-family: "Arial";
 }
@@ -26,18 +26,49 @@ display:block;
 .image{
 width:425px;
 padding-left:33%;
-padding-top:22%;
+margin-top:-48%;
 }
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: rgba(0, 0, 255, 0.3);
+ margin-bottom: 40%;
+}
+
+li {
+  float: left;
+  
+
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 141px;
+  text-decoration: none;
+ 
+  
+}
+
+
 </style>
 
 </head>
 <body>
 <div class="Header_and_subheader">
-<div class="Header_and_subheader_Box">
 <h1>Restaurant Crazy Sausage<h1>
 <h2>The Best pizza in the World!</h2>
 </div>
-</div>
+<ul>
+  <li><a href="menu.html">Menu</a></li>
+  <li><a href="delivery.html">Delivery Info</a></li>
+  <li><a href="contact.html">Contact</a></li>
+  <li><a href="map.html">Map</a></li>
+
+</ul>
 <image class="image" src="Background.png"> 
 
 
