--- a/Pizza/menu.html
+++ b/Pizza/menu.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 <title>Menu</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
 <style>
 body{
 background-image:url(Bentinos-Pizza-Background-Texture.jpg);
@@ -11,11 +13,78 @@ background-color: rgba(0, 0, 255, 0.3);
 color:white; 
 text-align:center;
 }
+.margherita{
+    position: relative;
+  width: 50%;
+}
+.pizzaM{
+  width: 300px;
+  height: 200px;
+  border-radius: 100%;
+  padding: 4%;
+  margin: 4%;
+  margin-right:10%;
+  background-size: auto;
+
+}
+.hover {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 1;
+  right: 0;
+  height: 69%;
+  width: 58%;
+  opacity: 0;
+  transition: .5s ease;
+  background-color: rgba(0, 0, 255, 0.3);
+  margin-right: 40%;
+  margin-top:7%;
+  border-radius:100%;
+
+}
+.peM {
+  color: white;
+  font-size: 20px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+.margherita:hover .hover {
+  opacity: 1;
+}
 </style>
 
 </head>
+
 <body>
-<h1 class="Title">Menu</h1>;
+
+    <div class="Title">
+        <h1>Menu</h1>
+        <h2>Hover to see the ingredients and the price.</h2>
+    </div>
+
+
+<div class="margherita">
+<image class="pizzaM" src="Pizza-Margherita-Pizza-Margarita-SAVOIR-FAIRE-by-enrilemoine-5-500x427.jpg"></image>
+<div class="hover">
+    <div class="peM">
+        <p>Tomato, Cheese, Basil</p>
+        <p>Price: $6</p>
+    </div>
+    <div class="SalamiGrande">
+            <image class="pizzaS" src="raster-static.postmates.jpg"></image>
+            <div class="hoverS">
+                <div class="peS">
+                    <p>Tomato, Cheese, Basil</p>
+                    <p>Price: $6</p>
+                </div>
+</div>
+</div>
 
 </body>
 
