--- a/Pizza/menu.html
+++ b/Pizza/menu.html
@@ -16,19 +16,86 @@ text-align:center;
 .margherita{
     position: relative;
   width: 50%;
+  padding: 4%;
+  margin: 4%;
+  margin-right:10%;
 }
 .pizzaM{
   
   width: 300px;
   height: 200px;
-  border-radius: 100%;
-  padding: 4%;
-  margin: 4%;
-  margin-right:10%;
   background-size: auto;
-
+  border-style: inset;
+  border-color:rgba(0, 0, 255, 0.3); ;
+}
+.textM{
+text-align: center;
+margin-right: 55%;
+background-color: rgba(0, 0, 255, 0.3);
+color:white;
+}
+.Peperoni{
+margin-top:-33.3%;
+margin-left:70%;
+}
+.pizzaP{
+  
+  width: 300px;
+  height: 200px;
+  background-size: auto;
+  border-style: inset;
+  border-color:rgba(0, 0, 255, 0.3); 
+}
+.textP{
+text-align: center;
+margin-right: 55%;
+background-color: rgba(0, 0, 255, 0.3);
+color:white;
+width:304px;
+}
+.prosciutto_funghi{
+  margin-top:5.7%;
+margin-left:8%;
 }
 
+.pizzaPr{
+  
+  width: 300px;
+  height: 200px;
+  background-size: auto;
+  border-style: inset;
+  border-color:rgba(0, 0, 255, 0.3); 
+}
+.textPr{
+text-align: center;
+margin-right: 55%;
+background-color: rgba(0, 0, 255, 0.3);
+color:white;
+width:304px;
+}
+.Calzone{
+  margin-top:-25.3%;
+margin-left:70%;
+}
+
+.pizzaC{
+  
+  width: 300px;
+  height: 200px;
+  background-size: auto;
+  border-style: inset;
+  border-color:rgba(0, 0, 255, 0.3); 
+}
+.textC{
+text-align: center;
+margin-right: 55%;
+background-color: rgba(0, 0, 255, 0.3);
+color:white;
+width:304px;
+}
+.previous {
+  color: white;
+}
 </style>
 
 </head>
@@ -36,19 +103,44 @@ text-align:center;
 <body>
 
     <div class="Title">
+       
         <h1>Menu</h1>
-        
+        <a href="index.html" class="previous">Home Page</a>
     </div>
 
 
-<div class="margherita">
+  <div class="margherita">
 <image class="pizzaM" src="Pizza-Margherita-Pizza-Margarita-SAVOIR-FAIRE-by-enrilemoine-5-500x427.jpg"></image>
-        <p>Tomato, Cheese, Basil</p>
+      <div class="textM"   >
+  <h3>Margherita</h3>
+  <p>Tomato, Cheese, Basil</p>
         <p>Price: $6</p>
-    </div>
+      </div>      
+  </div>
+  <div class="Peperoni">
+    <image class="pizzaP" src="chto_takoe_pepperoni-_kak_prigotovit_kolbasu_i_populyarnuyu_piccu_s_takim_nazvaniem_7.jpg"></image>
+       <div class="textP">
+         <h3>Peperoni</h3>
+         <p>Tomato, Chese, Peperoni Sausage, Olives</p>
+           <p>Price: $9</p>
+       </div>
+  </div>
+<div class="prosciutto_funghi">
+  <image class="pizzaPr" src="06694.jpg"></image>
+  <div class="textPr">
+    <h3>Prosciutto Funghi</h3>
+    <p>Tomato, Chese, Ham, Mushrooms</p>
+    <p>Price: $8</p>
+  </div>
 </div>
-</div>
-
+ <div class="Calzone">
+   <image class="pizzaC" src="download.jpg"></image>
+   <div class="textC">
+     <h3>Calzone</h3>
+     <p>Tomato, Ham, Sausage, Chese, Mushrooms</p>
+     <p>Price: $11</p>
+   </div>
+ </div>
 </body>
 
 </html>
